<resources>
    <string name="app_name">CoachTrackerKotlin</string>

    <!-- Home Fragment -->
    <string name="fg_home_title">Welcome on Home Fragment</string>

    <string name="tv_splash">Loading...</string>

    <!--  Login Fragement  -->
    <string name="login_tv_title">Please sign in</string>
    <string name="login_et_email">Email</string>
    <string name="login_et_password">Password</string>
    <string name="login_btn_login">Sign in</string>
    <string name="login_tv_not_registered">Don\'t have an account ? </string>
    <string name="login_tv_signup">Sign up</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="login_successful">Login successful</string>

    <!--  Register Fragement  -->
    <string name="register_tv_title">Please register</string>
    <string name="register_et_email">Email</string>
    <string name="register_et_password">Password</string>
    <string name="register_et_password_confirm">Confirm password</string>

    <string name="register_et_firstname">Firstname</string>
    <string name="register_et_lastname">Lastname</string>
    <string name="register_et_birthdate">Birthdate</string>

    <string name="register_btn_register">Sign up</string>
    <string name="register_tv_already_registered">Already registered ? </string>
    <string name="register_tv_signup">Sign in</string>

    <string name="passwords_differents">Passwords don\'t match</string>
    <string name="fill_all_inputs">Please fill all inputs</string>


    <!-- Event Create Fragment   -->
    <string name="tv_fg_event_create_title">Create Event</string>

    <!--  Create Match Fragment  -->
    <string name="create_match_fg_tv_title">Create Event</string>

    <!--  RecyclerView Calendar  -->
    <string name="rv_calendar_tv_title">Calendar</string>

    <!--  Show Event  -->
    <string name="toolbar_back_tv">Back</string>
    <string name="showevent_tv_visitor_team">Opponent team</string>
    <string name="showevent_tv_title">Team</string>
    <string name="showevent_tv_location_title">Location</string>
    <string name="showevent_tv_team_title">Team </string>


    <!--  Status  -->
    <string name="pending">pending</string>
    <string name="accepted">accepted</string>
    <string name="rejected">rejected</string>
    <string name="status_undefined">status undefined</string>


    <string name="hello_blank_fragment">Change moi ça très vite !</string>
    <string name="profile_tv_team_title">My team</string>
    <string name="profile_tv_phone">phone</string>
    <string name="profile_tv_phone_title">Phone</string>
    <string name="profile_tv_birthdate_title">Birthdate</string>
    <string name="profile_tv_email_title">Email</string>
    <string name="profile_tv_user_informations_title">User informations</string>
    <string name="profile_tv_title">Profile</string>
    <string name="fg_team_players_tv_title">Players</string>
    <string name="fg_team_coaches_tv_title">Coaches</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_user">Profile</string>
    <string name="profile_tv_logout">Logout</string>
    <string name="menu_team">Team</string>
    <string name="fg_team_tv_title">My team</string>
    <string name="inputs_ok">Valid input</string>
    <string name="undefinded_error">Undefined error</string>
    <string name="not_provided">not provided</string>
    <string name="register_successful">Register successful</string>
    <string name="logout">Disconnected</string>
    <string name="radio1">Training</string>
    <string name="radio2">Match</string>
    <string name="create_event_btn">Create</string>

</resources>