<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.coach.createevent.CreateEventFragment">

    <TextView
        android:id="@+id/create_match_fg_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_match_fg_tv_title"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group_radio"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/create_match_fg_tv_date"
        app:layout_constraintTop_toBottomOf="@+id/create_match_fg_tv_title">

        <RadioButton
            android:id="@+id/create_radio_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/create_radio_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            />


    </RadioGroup>

    <EditText
        android:id="@+id/create_match_fg_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Date de l'événement"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/create_match_fg_spinner_visitor_team"
        app:layout_constraintTop_toBottomOf="@+id/group_radio" />


    <Spinner
        android:id="@+id/create_match_fg_spinner_visitor_team"
        android:visibility="invisible"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="Visitor team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_match_fg_tv_date" />

    <Spinner
        android:id="@+id/create_match_fg_spinner_stadium"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_match_fg_spinner_visitor_team" />

    <Spinner
        android:id="@+id/create_match_fg_spinner_season"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="Season"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_match_fg_spinner_stadium" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event_btn"
        android:textSize="20sp"
        android:background="@drawable/btn_large"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_match_fg_spinner_season" />

</androidx.constraintlayout.widget.ConstraintLayout>