<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.shared.profile.ProfileFragment">

    <data>
        <variable
            name="viewModel"
            type="com.devid_academy.coachtrackerkotlin.presentation.ui.shared.profile.ProfileViewModel" />
    </data>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profileFragment"
            >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_tv_title"
                android:textSize="30sp"
                android:fontFamily="@font/poppinsbold"
                />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">



                    <TextView
                        android:id="@+id/profile_tv_full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Name"
                        android:text='@{String.format("%s %s", viewModel.userLiveData.firstname, viewModel.userLiveData.lastname)}'
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppinsmedium"
                        android:textStyle="bold"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <ImageView
                            android:id="@+id/iv_user_info"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_user_info"
                            app:tint="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/profile_tv_user_informations_title"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/iv_user_info"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="15dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_tv_email_title"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            />
                        <TextView
                            android:id="@+id/profile_tv_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:text="@{viewModel.userLiveData.email}"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_tv_birthdate_title"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            />
                        <TextView
                            android:id="@+id/profile_tv_birthdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:text="@{viewModel.userLiveData.birthdate}"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_tv_phone_title"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            />
                        <TextView
                            android:id="@+id/profile_tv_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:text="@{viewModel.userLiveData.phone}"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <ImageView
                            android:id="@+id/iv_team"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_team"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:tint="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_tv_team_title"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:fontFamily="@font/poppinsmedium"
                            app:layout_constraintStart_toEndOf="@id/iv_team"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginStart="10dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_tv_team"
                        android:text="@{viewModel.teamNameLiveData}"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:textSize="15sp"
                        android:layout_alignParentStart="true"
                        />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <ImageView
                            android:id="@+id/iv_logout"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_logout"
                            app:tint="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:id="@+id/btn_logout"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_tv_logout"
                            android:textSize="15sp"
                            android:fontFamily="@font/poppinsmedium"
                            app:layout_constraintStart_toEndOf="@id/iv_logout"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginStart="10dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>
</layout>